--- a/M2/nrickles3.gradle
+++ b/M2/nrickles3.gradle
@@ -1,14 +1,17 @@
-defaultTasks 'jar'
+defaultTasks 'clean', 'jar', 'build'
 
 apply plugin: 'java'
 
 jar {
     manifest {
-        attributes 'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain',
-                   'Class-Path' : 'lib\resources.jar'
+        attributes 'Main-Class': 'edu.gatech.oad.antlab.pkg1.AntLabMain',
+                   'Class-Path': '../../lib/resources.jar ../'
     }
+    archiveName = 'nrickles3.jar'
 }
 
 dependencies {
-    compile files('lib\resources.jar')
+    runtime files('lib/resources.jar')
+    runtime fileTree(dir: 'lib', include: '*.jar')
+    compile files('lib/resources.jar')
 }
