updated my gradle file

--- a/M2/jlord8.gradle
+++ b/M2/jlord8.gradle
@@ -7,7 +7,7 @@ jar {
         attributes 'Main-Class': 'edu.gatech.oad.antlab.pkg1.AntLabMain',
                    'Class-Path': '../../lib/resources.jar ../'
     }
-    archiveName = 'nrickles3.jar'
+    archiveName = 'jlord8.jar'
 }
 
 dependencies {
