--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/AndroidManifest.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/AndroidManifest.xml
@@ -14,12 +14,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".RegistrationActivity"
+            android:label="Registration">
+        </activity>
+        <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
+            android:label="Login">
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"
+            android:label="Water Reporter"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".WelcomeScreenActivity">
             <intent-filter>
