--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/AndroidManifest.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/AndroidManifest.xml
@@ -15,12 +15,10 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".controllers.RegistrationActivity"
-            android:label="Registration">
-        </activity>
+            android:label="Registration"></activity>
         <activity
             android:name=".controllers.LoginActivity"
-            android:label="Login">
-        </activity>
+            android:label="Login"></activity>
         <activity
             android:name=".controllers.MainActivity"
             android:label="Water Reporter"
@@ -32,6 +30,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".controllers.ProfileActivity"
+                  android:label="Profile"></activity>
     </application>
 
 </manifest>
