--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/AndroidManifest.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppCompactLight">
         <activity
             android:name=".controllers.RegistrationActivity"
             android:label="Registration"></activity>
@@ -21,8 +21,7 @@
             android:label="Login"></activity>
         <activity
             android:name=".controllers.MainActivity"
-            android:label="Water Reporter"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="Water Reporter" />
         <activity android:name=".controllers.WelcomeScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
