--- a/WaterReporter(Team14-HarambeLovedWaters)/app/build.gradle
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.google.firebase:firebase-database:9.8.0'
+    compile 'com.jjoe64:graphview:4.2.1'
+    compile 'com.android.support.constraint:constraint-layout:+'
     testCompile 'junit:junit:4.12'
 }
 
