--- a/WaterReporter(Team14-HarambeLovedWaters)/app/build.gradle
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/build.gradle
@@ -27,9 +27,11 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
+    //noinspection UseOfBundledGooglePlayServices,GradleDependency
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.jjoe64:graphview:4.2.1'
+    //noinspection GradleDynamicVersion
     compile 'com.android.support.constraint:constraint-layout:+'
     testCompile 'junit:junit:4.12'
 }
