--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/AndroidManifest.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--suppress ALL -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.noahrickles.waterreporterteam14_harambelovedwaters">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
@@ -19,7 +21,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppCompactLight">
+        android:theme="@style/AppCompactLight"
+        android:fullBackupContent="@xml/backup_descriptor"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".controllers.RegistrationActivity"
             android:label="Registration" />
